welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	
	var T= new Array[Color](getMondeHauteur());
	var i=Int ;
	for (i<- 0 to getMondeHauteur()){

		T(i)=getCouleurSol()
		avance()		
	}
	
     for (j <- 1 to getMondeHauteur()-2)
     {
     	droite()
     	avancer()
     	droite()
          for (i<- 0 to getMondeHauteur()-1){
          	setCouleurBrosse(T(j))
          	baisseBrosse()
          	leveBrosse()
     		}
     
}
}